fixed issue with details not showing

--- a/src/components/TendOrder/TendOrder.css
+++ b/src/components/TendOrder/TendOrder.css
@@ -3,3 +3,18 @@
     margin: 50px auto;
     border-bottom: 1px solid #465C8B;
 }
+
+.single-order .Order_delete {
+    display: block;
+    cursor: pointer;
+    text-align: center;
+    margin: 0px auto 10px auto;
+    color: white;
+    background-color: #465C8B;
+    text-decoration: none;
+    border-radius:5%;
+    border: 1px black;
+    font-size:16px;
+    height:50px;
+    width: 250px;
+}
